fix text alignment in news section and contact form styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,6 +219,10 @@ body {
   width: 100%;
 }
 
+.news-content p {
+  text-align: left;
+}
+
 /* Band */
 
 .band-members-container-flex {
@@ -317,7 +321,7 @@ input, textarea {
 input { 
   border: none;
   border-bottom: solid 2px #111111;
-  width: 95%;
+  width: 100%;
   height: 40px;
   outline-style: none;
 }
@@ -326,7 +330,7 @@ textarea {
   outline-style: none;
   resize: none;
   border: none;
-  width: 95%;
+  width: 100%;
   border-bottom: solid 2px #111111;
 }
 
